trunk/Archive2/a5/fb6b642bbddf64/output
main.cpp:1:1: error: stray '\360' in program
 void ğŸŒnd() {}
 ^
main.cpp:1:1: error: stray '\237' in program
main.cpp:1:1: error: stray '\215' in program
main.cpp:1:1: error: stray '\214' in program
